// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`badge badge with content 1`] = `
<main>
  <wx-view
    class="weui-badge  "
  >
    badge content
  </wx-view>
</main>
`;

exports[`badge badge without content 1`] = `
<main>
  <wx-view
    class="weui-badge  weui-badge_dot"
  >
    
  </wx-view>
</main>
`;
